Fix horizontal scroll

--- a/src/frontend/styles/layout.pcss
+++ b/src/frontend/styles/layout.pcss
@@ -31,7 +31,10 @@
     padding: var(--layout-padding-vertical) var(--layout-padding-horizontal);
     display: flex;
     justify-content: space-between;
-    max-width: calc(var(--layout-width-main-col) + var(--max-space-between-cols) + var(--layout-sidebar-width));
+    max-width: min(
+      calc(var(--layout-width-main-col) + var(--max-space-between-cols) + var(--layout-sidebar-width)),
+      calc(100vw - var(--layout-sidebar-width))
+    );
     margin-left: max(0px, calc(50vw - var(--layout-sidebar-width) - var(--layout-width-main-col) / 2));
     margin-right: auto;
 
